<resources>
    <string name="app_name">Udemy_TheCompleteAndroid14DeveloperCourse_Build100Apps</string>
    <string name="helloMyFriends">Hello My Friends!</string>
    <string name="enterYourName">Enter Your Name</string>
    <string name="anImage">An Image</string>
    <string name="welcomeToGreetingApp">Welcome to Greeting App</string>
    <string name="greet">Greet</string>
    <string name="hey">Hey</string>
    <string name="_0">%d</string>
    <string name="welcomeToCounterApp">Welcome To Counter App</string>
    <string name="start">Start</string>
    <string name="enterWeightInKilos">Enter Weight in Kilos</string>
    <string name="convert_kilos_to_pounds">Convert Kilos to Pounds</string>
    <string name="go_to_second_activity">Go To Second Activity</string>
    <string name="second_activity">Second Activity</string>
    <string name="open_website">Open Website</string>
    <string name="welcome_to_lucky_number_app">Welcome to Lucky Number App</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="wish_me_a_luck">Wish me a Luck!</string>
    <string name="your_lucky_number_is">Your Lucky Number is:</string>
    <string name="diceimage">diceImage</string>
    <string name="share_your_experience">Share Your Experience</string>
    <string name="lucky_number_app">Lucky Number App</string>
    <string name="pizza">Pizza</string>
    <string name="tomato">Tomato</string>
    <string name="cheese">Cheese</string>
    <string name="pineapple">Pineapple</string>
    <string name="clickMe">ClickMe</string>
    <string name="more_widgets">More Widgets</string>
    <string name="welcome_to_french_teacher_app">Welcome to French Teacher App</string>
    <string name="black">Black</string>
    <string name="green">Green</string>
    <string name="purple">Purple</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="french_teacher_app">French Teacher App</string>
    <string name="adapter">Adapter</string>
    <string name="custom_adapter">Custom Adapter</string>
    <string name="planet_name">Planet Name</string>
    <string name="numberOfMoons">Number Of Moons</string>
    <string name="volume_area_app">Volume Area App</string>
    <string name="volume_calculator">Volume Calculator</string>
    <string name="sphere_volume">Sphere Volume</string>
    <string name="please_enter_the_radius">Please Enter the Radius</string>
    <string name="submit">Submit</string>
    <string name="title">Title</string>
    <string name="your_description_here">Your description here</string>
    <string name="grocery_app">Grocery App</string>
    <string name="sports_app">Sports App</string>
    <string name="start_music">Start Music</string>
    <string name="stop_music">Stop Music</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="firstFragment">First Fragment</string>
    <string name="second_fragment">Second Fragment</string>
    <string name="fragment_app">Fragment App</string>
    <string name="active_first_fragment">Active First Fragment</string>
    <string name="active_second_fragment">Active Second Fragment</string>
    <string name="fragment_application">Fragment Application</string>
    <string name="view_pager_app">View Pager App</string>
    <string name="view_model_app">View Model App</string>
    <string name="increase_counter">Increase Counter</string>
    <string name="floating_add_contact_button">Floating Add Contact Button</string>
    <string name="contact_name">Contact name</string>
    <string name="contact_email">Contact Email</string>
    <string name="contact_manager_app">Contact Manager App</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="add_contact">Add Contact</string>

    <string name="moviesDBAPIKey">8232aca3eec37c27c35d107ebc49010a</string>
    <string name="main_activity_2">Main Activity 2</string>
    <string name="movie_app">Movie App</string>
    <string name="enter_password">Enter Password</string>
    <string name="welcome_to_your_journal_app">Welcome to your Journal App</string>
    <string name="login">Login</string>
    <string name="signin">SignIn</string>
    <string name="description">description...</string>
    <string name="date_created">Date Created</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="signup">SignUp</string>
    <string name="journal_app">Journal App</string>
    <string name="add_journal">Add Journal</string>
    <string name="sign_out">Sign Out</string>
    <string name="post_title">Post Title</string>
    <string name="post_date">Post Date</string>
    <string name="thoughts">Thoughts</string>
    <string name="save_post">Save Post</string>
    <string name="retry">Retry</string>
    <string name="paging_app">Paging App</string>
    <string name="enter_a">Enter A</string>
    <string name="enter_b">Enter B</string>
    <string name="enter_c">Enter C</string>
    <string name="solution">Solution</string>
    <string name="equation_solver">Equation Solver</string>
    <string name="quiz_app">Quiz App</string>
    <string name="ready_for_the_challenge">Ready for the challenge?</string>
    <string name="next">Next</string>
    <string name="correct">correct</string>
    <string name="result">Result</string>
    <string name="your_score_is">Your score is :</string>
    <string name="back_to_quiz">Back to quiz</string>
    <string name="work_manager_app">Work Manager App</string>
    <string name="realtime_database">Realtime Database</string>
    <string name="save_data">Save data</string>
    <string name="read_data">Read data</string>
    <string name="update_data">Update data</string>
    <string name="delete_data">Delete Data</string>
    <string name="download_big_file">Download Big File</string>
    <string name="first_coroutine">First Coroutine</string>
    <string name="anonymous_login">Anonymous Login</string>
    <string name="whatsapp_clone_chat_app">WhatsApp Clone/Chat App</string>
    <string name="please_enter_the_name_of_chat_group_you_want_to_create">Please enter the name of chat group you want to create</string>
    <string name="create_chat_group">Create Chat Group</string>
    <string name="messages">Messages</string>
    <string name="type_here">Type Here</string>
    <string name="send">Send</string>
    <string name="welcome_to_image_to_text_app">Welcome to Image to Text App</string>
    <string name="start_scanning">Start Scanning</string>
    <string name="take_a_snap">Take A Snap</string>
    <string name="detect_text">Detect Text</string>
    <string name="image_to_text_app">Image To Text App</string>
    <string name="enter_text_to_traslate">Enter text to traslate</string>
    <string name="translate">Translate</string>
    <string name="language_translator_app">Language Translator App</string>
    <string name="choose_image">Choose Image</string>
    <string name="read_text">Read Text</string>
    <string name="optical_chracter_recognition">Optical Chracter Recognition</string>
    <string name="visit_link">Visit Link</string>
    <string name="qr_code_scanner_app">QR Code Scanner App</string>
    <string name="camera">Camera</string>
    <string name="ml_face_detection">ML Face Detection</string>
    <string name="ok">OK</string>
    <string name="face_detection_app">Face Detection App</string>
    <string name="main_activity_3">Main Activity 3</string>
    <string name="default_notification_channel_id">cloud messaging default channel</string>
    <string name="messageFromCloud">Message From Cloud</string>
    <string name="subscribe_to_topics">Subscribe to Topics</string>
    <string name="read_notification">Read Notification</string>
    <string name="default_notification_channel_name">vinayak\'s notification channel</string>
    <string name="cloudMessageToken">Cloud Message Token %s</string>
    <string name="firebase_cloud_messaging_app">Firebase Cloud Messaging App</string>
    <string name="title_activity_main_maps">MainMapsActivity</string>
    <string name="get_selected">Get Selected</string>
    <string name="robert">Robert</string>
    <string name="manhattan">Manhattan</string>
    <string name="nsw">NSW</string>
    <string name="single_item_selection_recycler_view">Single Item Selection Recycler View</string>
    <string name="recycler_view_with_multiple_view_types">Recycler View With Multiple View Types</string>
    <string name="recycler_view_with_multiple_selection">Recycler View With Multiple Selection</string>
    <string name="admob_app">AdMob App</string>
    <string name="interstitial_ad_app">Interstitial Ad App</string>
    <string name="rewarded_ads_app">Rewarded Ads App</string>

    <string name="server_error_dialog_title">Server Error</string>
    <string name="server_error_dialog_message">Communication with the server failed</string>
    <string name="server_error_dialog_button_caption">OK</string>
    <string name="dependency_injection_stackoverflow_questions_app">Dependency Injection StackOverFlow Questions App</string>
    <string name="loading">Loading...</string>
    <string name="enter_usd">Enter USD</string>
    <string name="convert_to_euro">Convert To Euro</string>
    <string name="type_your_title_here">Type your title here...</string>
    <string name="type_something">Type something...</string>
    <string name="todo">TODO</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="generate_lottery_number">Generate Lottery Number</string>
    <string name="share_your_lottery_number">Share Your Lottery Number</string>
    <string name="note_taking_app">Note Taking App</string>
    <string name="lottery_app">Lottery App</string>
    <string name="food_app_ui">Food App UI</string>
    <string name="local_events">Local Events</string>
    <string name="new_arrival">New Arrival</string>
    <string name="furniture_app">Furniture App</string>
    <string name="fashion_app">Fashion App</string>
    <string name="main_activity_4">Main Activity 4</string>
    <string name="kotlin_planet_app">Kotlin Planet App</string>
    <string name="create_account">Create Account</string>
    <string name="volume_calculator_app">Volume Calculator App</string>
    <string name="enter_radius">Enter radius</string>
    <string name="contact_manager_app_kotlin">Contact Manager App Kotlin</string>
    <string name="kotlin_navigation_app">Kotlin Navigation App</string>
    <string name="kotlin_sports_app">Kotlin Sports App</string>
    <string name="navigation_header">Navigation Header</string>
    <string name="home_page">Home page</string>
    <string name="message_page">Message Page</string>
    <string name="settings_page">Settings Page</string>
    <string name="profile">profile</string>
    <string name="login_page">Login Page</string>
    <string name="oneNavigationDrawer">Open Navigation Drawer</string>
    <string name="closeNavigationDrawer">Close Navigation Drawer</string>
    <string name="kotlin_navigation_drawer">Kotlin Navigation Drawer</string>
    <string name="display_app_in_text">Display App In Text</string>
    <string name="mvc_pattern_app">MVC Pattern App</string>
    <string name="mvp_pattern_app">MVP Pattern App</string>
    <string name="mvvm_pattern_app">MVVM Pattern App</string>
    <string name="button">Button</string>
    <string name="item_name">Item Name</string>
    <string name="item_price">Item Price</string>
    <string name="item_quantity">Item Quantity</string>
</resources>