<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="40dp"
    android:layout_marginEnd="40dp"
    tools:context=".MainActivity3">

    <Button
        android:id="@+id/openCloudMessagingAppButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="0dp"
        android:text="@string/firebase_cloud_messaging_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/openRVWithSingleItemSelectionButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/single_item_selection_recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/openRVWithMultipleViewTypesAppButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:text="@string/recycler_view_with_multiple_view_types"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/openRVWithMultipleSelectionAppButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="150dp"
        android:text="@string/recycler_view_with_multiple_selection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/openAdMobAppButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="200dp"
        android:text="@string/admob_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/openInterstitialAdAppButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="250dp"
        android:text="@string/interstitial_ad_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/openRewardedAdAppButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="300dp"
        android:text="@string/rewarded_ads_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/openDependencyInjectionAppButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="350dp"
        android:text="@string/dependency_injection_stackoverflow_questions_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/openNoteTakingAppButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="400dp"
        android:text="@string/note_taking_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/openLotteryAppButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="450dp"
        android:text="@string/lottery_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/openGroceryAppButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="500dp"
        android:text="@string/grocery_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/openFoodAppUIButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="550dp"
        android:text="@string/food_app_ui"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/openFurnitureAppButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="600dp"
        android:text="@string/furniture_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/openMainActivity4Button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="650dp"
        android:text="@string/main_activity_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>