<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="40dp"
    android:layout_marginEnd="40dp"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/openLuckyNumberAppButton"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="0dp"
        android:text="@string/lucky_number_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/openMoreWidgetsButton"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="50dp"
        android:text="@string/more_widgets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/openFrenchTeacherAppButton"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="100dp"
        android:text="@string/french_teacher_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/openAdapterActivityButton"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="150dp"
        android:text="@string/adapter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/openCustomAdapterButton"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="200dp"
        android:text="@string/custom_adapter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/openVolumeAreaAppButton"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="250dp"
        android:text="@string/volume_area_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/openGroceryAppButton"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="300dp"
        android:text="@string/grocery_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/openSportsAppButton"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="350dp"
        android:text="@string/sports_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/openFragmentApplicationButton"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="400dp"
        android:text="@string/fragment_application"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/openViewPagerAppButton"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="450dp"
        android:text="@string/view_pager_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/openViewModelAppButton"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="500dp"
        android:text="@string/view_model_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/openContactManagerAppButton"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="550dp"
        android:text="@string/contact_manager_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/openMainActivity2Button"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="600dp"
        android:text="@string/main_activity_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>